# desktop-shell

./: .gitignore  Cargo.toml  README.md  app.ts  biome.json  build.rs  flake.nix  main.css  package.json  shell.qml  style.css  tailwind.config.js  tailwind.config.mjs  tsconfig.json
.zed/: settings.json
common/: Button.tsx  PopupWindow.tsx  window.tsx
components/: BorderFrame.qml  CircularProgress.qml  GenericOsd.qml  GlobalFrame.qml  Icon.qml  ProgressBar.qml  StyledTabButton.qml  StyledText.qml  StylizedText.qml  TooltipArea.qml  TrayMenu.qml
config/: Appearance.qml
constants/: colors.json  icons.ts  spacing.ts
css/: main.css
lib/: battery.ts  brightness.ts  notification.ts  time.ts  util.ts  warp.ts
modules/: Osd.qml
modules/bar/: Bar.qml  Battery.qml  FocusedWindow.qml  Mpris.qml  SystemStats.qml  Workspaces.qml
modules/dashboard/: DashboardSurface.qml  DashboardWindow.qml
modules/frame/: BorderFrame.qml  GlobalFrame.qml
modules/launcher/: Launcher.qml
modules/notifications/: NotificationHistory.qml  (+2 more)
services/: Battery.qml  Brightness.qml  Cliphist.qml  Dashboard.qml  Notifications.qml  Session.qml  SystemStats.qml  Time.qml  WifiStatus.qml
src/: main.rs  niri.rs  windows.rs
styles/: colors.css  custom.css  main.css  main.scss  misc.scss  notification.scss
ui/: app-window.slint  circular-progress.slint  state.slint  styles.slint
util/: colors.json  icons.ts  util.ts
utils/: icons.ts
widget/: AppLauncher.tsx  Bar.tsx  Calendar.tsx  Clipboard.tsx  Dashboard.tsx  Desktop.tsx  Media.tsx  OSD.tsx  PowerMenu.tsx  QuickSettings.tsx
(+47 files in other folders)
