[package]
name = "desktop-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
slint = "~1.13"
# spell-framework = "1.0.0"
spell-framework = { version = "1.0.0", git = "https://github.com/VimYoung/Spell/" }

[build-dependencies]
slint-build = "~1.13"

[patch.crates-io]
slint = { git = "https://github.com/slint-ui/slint" }
slint-build = { git = "https://github.com/slint-ui/slint" }
i-slint-core = { git = "https://github.com/slint-ui/slint" }
i-slint-renderer-skia = { git = "https://github.com/slint-ui/slint" }
